--- a/finances_en.html
+++ b/finances_en.html
@@ -34,20 +34,47 @@
             <!-- Financial Summary Cards -->
             <section class="mb-12">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
-                        <p class="text-lg font-medium text-[var(--text-secondary-color)]">Gross Revenue (Last 30 Days)</p>
+                    <!-- Gross Revenue Card -->
+                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+                        <div class="flex justify-between items-start">
+                            <p class="text-lg font-medium text-[var(--text-secondary-color)]">Gross Revenue (Last 30 Days)</p>
+                            <div class="bg-emerald-100 p-2 rounded-full">
+                                <svg class="h-6 w-6 text-emerald-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                            </div>
+                        </div>
                         <p id="gross-revenue" class="text-4xl font-bold text-[var(--primary-color)] mt-2">$28,900</p>
-                        <p id="gross-revenue-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+12% vs previous period</p>
+                        <div class="flex items-center text-sm text-green-600 mt-1">
+                            <svg class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
+                            <span>+12% vs previous period</span>
+                        </div>
                     </div>
-                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
-                        <p class="text-lg font-medium text-[var(--text-secondary-color)]">Total Expenses (Last 30 Days)</p>
+                    <!-- Total Expenses Card -->
+                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+                        <div class="flex justify-between items-start">
+                            <p class="text-lg font-medium text-[var(--text-secondary-color)]">Total Expenses (Last 30 Days)</p>
+                             <div class="bg-red-100 p-2 rounded-full">
+                                <svg class="h-6 w-6 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V6.375c0-.621.504-1.125 1.125-1.125h.375m16.5 0h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375" /></svg>
+                            </div>
+                        </div>
                         <p id="total-expenses" class="text-4xl font-bold text-red-500 mt-2">$17,340</p>
-                        <p id="total-expenses-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+5% vs previous period</p>
+                        <div class="flex items-center text-sm text-red-500 mt-1">
+                           <svg class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
+                            <span>+5% vs previous period</span>
+                        </div>
                     </div>
-                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
-                        <p class="text-lg font-medium text-[var(--text-secondary-color)]">Net Profit (Last 30 Days)</p>
+                    <!-- Net Profit Card -->
+                    <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+                        <div class="flex justify-between items-start">
+                            <p class="text-lg font-medium text-[var(--text-secondary-color)]">Net Profit (Last 30 Days)</p>
+                             <div class="bg-green-100 p-2 rounded-full">
+                                <svg class="h-6 w-6 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941" /></svg>
+                            </div>
+                        </div>
                         <p id="net-profit" class="text-4xl font-bold text-green-600 mt-2">$11,560</p>
-                        <p id="net-profit-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+15% vs previous period</p>
+                         <div class="flex items-center text-sm text-green-600 mt-1">
+                           <svg class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
+                            <span>+15% vs previous period</span>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -68,34 +95,34 @@
                             </thead>
                             <tbody id="recent-transactions-table-body" class="bg-white divide-y divide-[var(--divider-color)]">
                                 <!-- Transactions will be dynamically loaded here by JavaScript -->
-                                <tr>
+                                <tr class="hover:bg-gray-50 transition-colors">
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">2025-07-14</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Etsy Sales Payout</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-green-600">Income</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">Income</span></td>
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-green-600">+$1,500.00</td>
                                 </tr>
-                                <tr>
+                                <tr class="hover:bg-gray-50 transition-colors">
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">2025-07-13</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Trendyol Commission</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-red-500">Expense</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">Expense</span></td>
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-red-500">-$250.00</td>
                                 </tr>
-                                <tr>
+                                <tr class="hover:bg-gray-50 transition-colors">
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">2025-07-12</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Website Order #W40078</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-green-600">Income</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">Income</span></td>
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-green-600">+$35.00</td>
                                 </tr>
-                                <tr>
+                                <tr class="hover:bg-gray-50 transition-colors">
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">2025-07-10</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Marketing Campaign Spend</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-red-500">Expense</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">Expense</span></td>
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-red-500">-$50.00</td>
                                 </tr>
-                                <tr>
+                                <tr class="hover:bg-gray-50 transition-colors">
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">2025-07-05</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Ekobol Partner Plan Fee</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-red-500">Expense</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">Expense</span></td>
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-red-500">-$500.00</td>
                                 </tr>
                             </tbody>
@@ -108,7 +135,7 @@
             </section>
 
             <!-- Subscription Details -->
-            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-12">
+            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-12 hover:shadow-lg transition-shadow duration-300">
                 <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Subscription & Billing</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
@@ -127,16 +154,25 @@
             </section>
 
             <!-- AI Financial Insights -->
-            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
+            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 hover:shadow-lg transition-shadow duration-300">
                 <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">AI Financial Insights</h2>
-                <p class="text-base text-[var(--text-secondary-color)] mb-4">
+                <p class="text-base text-[var(--text-secondary-color)] mb-6">
                     Our AI analyzes your financial data to provide actionable recommendations.
                 </p>
-                <ul id="ai-financial-insights-list" class="list-disc list-inside space-y-2 text-base text-[var(--text-secondary-color)]">
-                    <li>Your marketing spend is 2% higher than average for your sales volume. Review campaign efficiency.</li>
-                    <li>Consider negotiating lower shipping rates; current rates impact your net profit by 1.5%.</li>
-                    <li>Identified potential tax deductions related to office supplies totaling $X.XX this quarter.</li>
-                </ul>
+                <div id="ai-financial-insights-list" class="space-y-4">
+                    <div class="flex items-start gap-4 p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg">
+                        <svg class="h-6 w-6 text-yellow-500 flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" /></svg>
+                        <p class="text-base text-[var(--text-secondary-color)]">Your marketing spend is 2% higher than average for your sales volume. Review campaign efficiency.</p>
+                    </div>
+                     <div class="flex items-start gap-4 p-4 bg-blue-50 border-l-4 border-blue-400 rounded-r-lg">
+                        <svg class="h-6 w-6 text-blue-500 flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        <p class="text-base text-[var(--text-secondary-color)]">Consider negotiating lower shipping rates; current rates impact your net profit by 1.5%.</p>
+                    </div>
+                     <div class="flex items-start gap-4 p-4 bg-green-50 border-l-4 border-green-400 rounded-r-lg">
+                        <svg class="h-6 w-6 text-green-500 flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V6.375c0-.621.504-1.125 1.125-1.125h.375m16.5 0h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375" /></svg>
+                        <p class="text-base text-[var(--text-secondary-color)]">Identified potential tax deductions related to office supplies totaling <strong>$1,250.00</strong> this quarter.</p>
+                    </div>
+                </div>
                 <div class="mt-6 text-center">
                     <a href="generate-report_en.html" class="inline-flex items-center justify-center text-[var(--primary-color)] font-bold hover:underline">Generate Detailed Report →</a>
                 </div>
