--- a/invoice.html
+++ b/invoice.html
@@ -17,63 +17,63 @@
     <link rel="stylesheet" href="global.css">
 
 </head>
-<body class="bg-[var(--background-color)] text-[var(--text-primary-color)]">
+<body class="bg-[var(--background-secondary-color)] text-[var(--text-primary-color)]">
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
 
     <!-- Header will be loaded here by JavaScript -->
     <div id="header-placeholder"></div>
 
-    <main class="flex-1 px-4 sm:px-10 lg:px-20 py-10 bg-[var(--background-secondary-color)]">
+    <main class="flex-1 px-4 sm:px-10 lg:px-20 py-10">
         <div class="layout-content-container flex flex-col w-full max-w-4xl mx-auto">
-            <div class="mb-8 flex justify-between items-center">
+            <div class="mb-8 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
                 <div>
-                    <h1 class="text-[var(--text-primary-color)] text-4xl font-bold leading-tight tracking-tight">Fatura #INV20250701</h1>
+                    <h1 class="text-[var(--text-primary-color)] text-3xl font-bold leading-tight tracking-tight">Fatura #INV20250701</h1>
                     <p class="text-[var(--text-secondary-color)] text-base font-normal leading-normal mt-1">Ödeme detaylarını ve fatura kalemlerini görüntüleyin.</p>
                 </div>
-                <button class="inline-flex items-center justify-center rounded-full h-10 px-4 bg-[var(--primary-color)] text-white text-base font-bold shadow-lg hover:shadow-xl transition-shadow duration-300">
+                <button class="w-full sm:w-auto inline-flex items-center justify-center rounded-full h-10 px-6 bg-[var(--primary-color)] text-white text-base font-bold shadow-lg hover:shadow-xl hover:bg-emerald-600 transition-all duration-300">
                     <svg class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" /></svg>
-                    Faturayı İndir
+                    <span>PDF İndir</span>
                 </button>
             </div>
 
-            <!-- Invoice Details Header -->
-            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-8">
-                <div class="flex justify-between items-start mb-6">
+            <!-- Invoice Details -->
+            <section class="bg-[var(--background-color)] rounded-xl border border-[var(--divider-color)] shadow-sm p-8">
+                <!-- Invoice Header -->
+                <div class="flex justify-between items-start mb-8 pb-8 border-b border-[var(--divider-color)]">
                     <div>
                         <img src="ekobol.ico" alt="Ekobol Logo" class="h-16 w-16 mb-2">
-                        <p class="text-sm font-semibold text-[var(--text-primary-color)]">Ekobol Hizmetleri</p>
-                        <p class="text-sm text-[var(--text-secondary-color)]">Destek Hattı: support@ekobol.com</p>
-                        <p class="text-sm text-[var(--text-secondary-color)]">Adres: [Ekobol Adresi]</p>
+                        <p class="text-lg font-semibold text-[var(--text-primary-color)]">Ekobol Hizmetleri A.Ş.</p>
+                        <p class="text-sm text-[var(--text-secondary-color)]">destek@ekobol.com</p>
                     </div>
                     <div class="text-right">
-                        <h2 class="text-3xl font-bold text-[var(--text-primary-color)] mb-2">FATURA</h2>
-                        <p class="text-lg font-semibold text-[var(--text-primary-color)]">#INV20250701</p>
+                        <h2 class="text-2xl font-bold text-[var(--text-primary-color)] mb-1">FATURA</h2>
+                        <p class="text-sm font-medium text-[var(--text-secondary-color)]">#INV20250701</p>
                         <p class="text-sm text-[var(--text-secondary-color)]">Tarih: 1 Temmuz 2025</p>
                     </div>
                 </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-y-4 text-sm">
+                <!-- Billed To & Payment Status -->
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-y-6 text-sm mb-8">
                     <div>
-                        <p class="font-semibold text-[var(--text-primary-color)]">Fatura Edilen Kişi:</p>
-                        <p class="text-[var(--text-secondary-color)]">Ayşe Yılmaz</p>
+                        <p class="font-semibold text-[var(--text-secondary-color)] mb-1">FATURA EDİLEN:</p>
+                        <p class="font-bold text-[var(--text-primary-color)] text-base">Ayşe Yılmaz</p>
                         <p class="text-[var(--text-secondary-color)]">ayse.yilmaz@example.com</p>
                         <p class="text-[var(--text-secondary-color)]">Örnek Şirketiniz A.Ş.</p>
                     </div>
                     <div class="md:text-right">
-                        <p class="font-semibold text-[var(--text-primary-color)]">Ödeme Durumu:</p>
-                        <p class="text-green-600 font-bold">Ödendi</p>
-                        <p class="text-sm text-[var(--text-secondary-color)]">Ödeme Tarihi: 1 Temmuz 2025</p>
-                        <p class="text-sm text-[var(--text-secondary-color)]">Ödeme Yöntemi: Kredi Kartı</p>
+                        <p class="font-semibold text-[var(--text-secondary-color)] mb-1">ÖDEME DURUMU:</p>
+                        <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-bold bg-green-100 text-green-800">
+                            ÖDENDİ
+                        </span>
+                        <p class="text-sm text-[var(--text-secondary-color)] mt-2">Ödeme Tarihi: 1 Temmuz 2025</p>
                     </div>
                 </div>
-            </section>
 
-            <!-- Invoice Items Table -->
-            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm overflow-hidden mb-8">
-                <div class="overflow-x-auto">
+                <!-- Invoice Items Table -->
+                <div class="overflow-x-auto mb-8">
                     <table class="min-w-full divide-y divide-[var(--divider-color)]">
-                        <thead class="bg-gray-50">
+                        <thead class="bg-[var(--background-secondary-color)]">
                             <tr>
                                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Açıklama</th>
                                 <th scope="col" class="px-6 py-3 text-right text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Miktar</th>
@@ -81,7 +81,7 @@
                                 <th scope="col" class="px-6 py-3 text-right text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Toplam</th>
                             </tr>
                         </thead>
-                        <tbody class="bg-white divide-y divide-[var(--divider-color)]">
+                        <tbody class="bg-[var(--background-color)] divide-y divide-[var(--divider-color)]">
                             <tr>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Ekobol Partner Planı (Aylık Abonelik)</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm text-[var(--text-primary-color)]">1</td>
@@ -89,34 +89,38 @@
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm text-[var(--text-primary-color)]">₺500.00</td>
                             </tr>
                             <tr>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Ekstra YZ Kredi Paketi</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">Ekstra YZ Kredi Paketi (1000 Kredi)</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm text-[var(--text-primary-color)]">1</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm text-[var(--text-primary-color)]">₺50.00</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm text-[var(--text-primary-color)]">₺50.00</td>
                             </tr>
                         </tbody>
-                        <tfoot>
-                            <tr>
-                                <th colspan="3" scope="row" class="px-6 py-3 text-right text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Ara Toplam:</th>
-                                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-[var(--text-primary-color)]">₺550.00</td>
-                            </tr>
-                            <tr>
-                                <th colspan="3" scope="row" class="px-6 py-3 text-right text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Vergi (%18 KDV):</th>
-                                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-[var(--text-primary-color)]">₺99.00</td>
-                            </tr>
-                            <tr>
-                                <th colspan="3" scope="row" class="px-6 py-3 text-right text-sm font-bold text-[var(--text-primary-color)] uppercase tracking-wider">Genel Toplam:</th>
-                                <td class="px-6 py-4 whitespace-nowrap text-right text-lg font-bold text-[var(--primary-color)]">₺649.00</td>
-                            </tr>
-                        </tfoot>
                     </table>
                 </div>
-            </section>
-
-            <!-- Thank You / Notes -->
-            <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 text-center">
-                <p class="text-lg font-semibold text-[var(--text-primary-color)] mb-2">İşbirliğiniz için teşekkür ederiz!</p>
-                <p class="text-[var(--text-secondary-color)] text-sm">Bu fatura otomatik olarak oluşturulmuştur. Herhangi bir sorunuz varsa lütfen destek ekibimizle iletişime geçin.</p>
+                
+                <!-- Totals -->
+                <div class="flex justify-end">
+                    <div class="w-full max-w-xs space-y-3">
+                        <div class="flex justify-between text-sm">
+                            <span class="text-[var(--text-secondary-color)]">Ara Toplam:</span>
+                            <span class="font-medium text-[var(--text-primary-color)]">₺550.00</span>
+                        </div>
+                        <div class="flex justify-between text-sm">
+                            <span class="text-[var(--text-secondary-color)]">Vergi (%20 KDV):</span>
+                            <span class="font-medium text-[var(--text-primary-color)]">₺110.00</span>
+                        </div>
+                        <div class="flex justify-between pt-3 border-t border-[var(--divider-color)] text-base font-bold">
+                            <span class="text-[var(--text-primary-color)]">Genel Toplam:</span>
+                            <span class="text-[var(--primary-color)]">₺660.00</span>
+                        </div>
+                    </div>
+                </div>
+                
+                 <!-- Thank You / Notes -->
+                <div class="mt-12 pt-8 border-t border-[var(--divider-color)] text-center">
+                    <p class="text-lg font-semibold text-[var(--text-primary-color)] mb-2">İşbirliğiniz için teşekkür ederiz!</p>
+                    <p class="text-[var(--text-secondary-color)] text-sm">Bu fatura otomatik olarak oluşturulmuştur. Herhangi bir sorunuz varsa lütfen destek ekibimizle iletişime geçin.</p>
+                </div>
             </section>
         </div>
     </main>
